2004-10-04    <tino@firebird.03.softkill.net>

	* Makefile.tino.dist, Makefile.awk: changed "stop" rule from error
	prone "##END##" to more easy portable "Makefile::".

2004-10-02    <tino@firebird.03.softkill.net>

	* file.h (tino_file_read_intr, tino_file_read, tino_file_read_all,
	tino_file_write_intr, tino_file_write, tino_file_write_all,
	tino_file_flush, tino_file_flush_fd): added
	(tino_file_open): flags corrected - they shall be dummies, anyway.
	(tino_file_create, tino_file_open_create, tino_file_open_read):
	added
	(tino_file_stat_fd, tino_file_open_fd, tino_file_truncate_fd):
	renamed the functions which operate on a file descriptor to
	FUNC_fd instead of fFUNC.  There are convenience defines (which I
	perhaps might drop in future).

	* slist.h (tino_glist_count): added

2004-09-30    <tino@firebird.03.softkill.net>

	* Makefile.d.proto: ADD_CFLAGS added, such that Generation of .d
	files has a chance to find all includes.

	* Makefile.awk: Ignore the absolute filename paths, too, as those
	change if transported to another platform.

2004-09-29    <tino@firebird.03.softkill.net>

	* Makefile.proto (install), Makefile.tino.dist (INSTALLPATH):
	install now honors the INSTALLPATH variable, and if missing,
	everything is installed in $HOME (currently only $INSTALLPATH/bin/
	is supported).

	* Makefile (dist): Now 'make dist' makes sure no debugging defines
	are still present.

	* Makefile.proto (tar): added

2004-09-04    <tino@firebird.03.softkill.net>

	* Makefile.awk, Makefile.tino.dist, Makefile.proto: changes for
	better override support.

	* Makefile-tino.sh, Makefile.awk, Makefile.proto,
	Makefile.d.proto: automatic creation of dependencies added (new
	#include(...) method Makefile.d.proto).

2004-08-25    <tino@firebird.03.softkill.net>

	* Makefile.awk, Makefile-tino.sh: Lines which contain @MD5TINOIGN@
	will be escaped from MD5 sum safety check.  This is needed to be
	able to add date information in generated files (which always