@@ -1,3 +1,8 @@
+2004-10-10    <tino@firebird.03.softkill.net>
+
+	* file.h, exception.h: interaction of these two defined, however
+	this is ugly.  exception.h not yet usable, too.
+
 2004-10-04    <tino@firebird.03.softkill.net>
 
 	* Makefile.tino.dist, Makefile.awk: changed "stop" rule from error
